# tfqieci

./: README.md  configure  dump_vocab.py  python_config.sh
include/base/: base.h
include/cc/: tf_seg_model.h  viterbi_decode.h
include/utils/: basic_vocab.h  json_util.h  vocab.h  word2vec_vob.h
models/: visual_graph.py
python/: ReadMe.md  demo.py  demo_dist.py  ds.py  jiba_seg.py  seg_back_api.py  sentence_breaker.py  tf_seg_model.py  tfmodel.py  viterbi_decode.py
python/save/: dump_vocab.py
python/tools/: visual_word2vec.py
python/train/: basic_vocab.py  filter_sentence.py  generate_char_embedding.py  generate_pos_train.py  generate_train_free.py  generate_training.py  idcnn.py  preprocess.py  process_anno_file.py  process_icwb.py  process_people.py  replace_unk.py  train_cws.py  train_cws.py.bak  train_singlge_cws.py  train_singlge_cws1.py  train_singlge_cws2.py  train_singlge_cws3.py  train_singlge_cws4.py  word2vec_vob.py
python/web/: index.py  kcwctf_seg.py  userdicr_jieseg.py
python/web/templates/: jiebaseg.html
src/base/: CMakeLists.txt  Makefile
src/cc/: CMakeLists.txt  Makefile  cmake_install.cmake  gen_seg_eval.cc  pos_tagger.cc  seg_backend_api.cc  sentence_breaker.cc  test_ac_scanner.cc  test_breaker.cc  test_seg.cc  tf_seg_model.cc  viterbi_decode.cc
src/model/: tfmodel.cc
src/utils/: CMakeLists.txt  Makefile  basic_vocab.cc  cmake_install.cmake  jsonxx.cc  py_word2vec_vob.cc  w2v.cbp  word2vec_vob.cc
src/word2vec/: CMakeLists.txt  Makefile
tools/: bazel.rc  python_bin_path.sh
